# Jupiter

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  _.swp  build.sh  gmon.out  prebuild.json  prebuild.py  prebuild_dependencies.py  requirements.txt
AndroidNDKGame/: CMakeLists.txt
AndroidNDKGame/cpp/: main.cpp
AndroidNDKGame/cpp/Engine/: AssetTextureLoader.cpp  AssetTextureLoader.h  Common.h  Engine.h  Image.h  Log.h  Sprite.cpp  Sprite.h  Texture.cpp  TextureLoader.cpp  TextureLoader.h  Tools.cpp  Tools.h
AndroidNDKGame/java/: AndroidManifest.xml
AndroidNDKGame/java/res/values/: strings.xml
apps/: CMakeLists.txt
apps/Ananke/: Ananke.sln
apps/Ananke/Ananke/: Ananke.csproj  Main.cs
apps/Ananke/SlidingDagger/: SlidingDagger.csproj
apps/Ananke/SlidingDagger/Properties/: AssemblyInfo.cs
apps/Ananke/SurrealCrayon/: SurrealCrayon.csproj
apps/Ananke/SurrealCrayon/Properties/: AssemblyInfo.cs
apps/Callisto/: CMakeLists.txt
apps/Callisto/src/: GLFWMain.cpp  GamePlayer.cpp  GamePlayer.h  GlutMain.cpp
apps/Callisto/src/asteroids/: BackGround.cpp  BackGround.h  BattleShip.cpp  BattleShip.h  Bullet.cpp  Bullet.h  FireButton.cpp  FireButton.h  GameAgain.cpp  GameAgain.h  GasButton.cpp  GasButton.h  LeftButton.cpp  LeftButton.h  Life.cpp  Life.h  RightButton.cpp  RightButton.h  Rock.cpp  Rock.h  StartButton.cpp  StartButton.h  Tools.h  WinAgain.cpp  WinAgain.h
apps/ComplexShape/: ComplexShape.py
apps/Dia/: Dia.lua
apps/Europe/: Europe.py  config.json  test.py  testTree.py
apps/Europe/modules/: Box2dBodySettings.py  ResourceModel.py  __init__.py
apps/Europe/res/: CreateBox2dBody.ui  CreateBox2dFixture.ui  Europe.py  Europe.ui  GameDesigner.py  GameDesigner.ui  NodeSettings.ui  SpriteSettings.py  __init__.py  resources.qrc  resources_rc.py
apps/EuropeGameDesigner/: Europe.py  config.json
apps/EuropeGameDesigner/res/: GameDesigner.py  GameDesigner.ui  GameDesignerAlt.py  GameDesignerAlt.ui  SpriteSettings.ui  __init__.py
apps/FreeType/: main.cpp
apps/GameDesigner/: CMakeLists.txt
apps/GameDesigner/src/: GLViewer.cpp  GLViewer.h  GameDesigner.cpp  GameDesigner.h  main.cpp
apps/GameDesigner/ui/: GameDesigner.ui
apps/GamePlayer/: CMakeLists.txt
apps/GamePlayer/src/: GLFWMain.cpp  GamePlayer.cpp  GamePlayer.h  GlutMain.cpp  Test.cpp  main.cpp  test_glm.cpp
apps/GamePlayer/src/asteroids/: BackGround.cpp  (+24 more)
apps/GamePlayerAndroid/: CMakeLists.txt
apps/GamePlayerAndroid/cpp/: main.cpp
apps/Io/: Io.py  glut.py
apps/Io/Io/: Io.py  __init__.py
apps/Io/modules/: FallingBox.py  __init__.py
apps/Io/res/: SelectImplementation.ui
apps/IoGamePlayer/: Io.py  resources_rc.py
apps/IoGamePlayer/res/: SelectImplementation.py  __init__.py  move.py  resources.qrc  resources_rc.py
apps/Json/: json.i  main.cpp  test.cpp  test.h
apps/LuaParseTest/: CMakeLists.txt  main.cpp
apps/Painter/: Painter.py
apps/PyGameDesigner/: .gitignore  Europe.py  config.json  generate.py  main.py
apps/PyGameDesigner/res/: Box2dBodySettings.py  Box2dBodySettings.ui  GameDesigner.py  GameDesigner.qrc  GameDesigner.ui  NodeSettings.py  __init__.py  resources.qrc  resources_rc.py
apps/PyGameDesigner/ui/: main.ui
apps/PyGamePlayer/: glut.py  main.py  move.py  resources_rc.py
apps/PyGamePlayer/res/: move.ui  resources.qrc
apps/QtLevelEditor/: CMakeLists.txt
apps/QtLevelEditor/res/: QtLevelEditor.qrc
apps/QtLevelEditor/src/: Common.h  LevelEditor.cpp  LevelEditor.h  main.cpp
apps/QtLevelEditor/ui/: QtLevelEditor.ui  QtSceneEditor.ui
apps/Ref/: RCO.cpp  RCO.h  Ref.h  main.cpp
apps/SendFileServer/: requirements.txt  server.py  test_file
apps/Test/: CMakeLists.txt  OggVorbisOpenAL.cpp  Shaders.cpp  Shaders.h  Test-7.cpp  Test.cpp  Tools.cpp  Tools.h  main.cpp  main.h  test-4.cpp  test-5.cpp
apps/Test/HungryStreet/: CMakeLists.txt  HungryStreet.cpp
apps/Test/OlivePlastic/: CMakeLists.txt  OlivePlastic.cpp  README.md
apps/Test/RichLaser/: CMakeLists.txt  RichLaser.cpp
apps/Test/SubtleCreek/: CMakeLists.txt  SubtleCreek.cpp
apps/Test/ViperFreaky/: CMakeLists.txt  README.md  ViperFreaky.py
apps/Test/button/: button.cpp
apps/Test/test-6/: CMakeLists.txt  File.cpp  File.h  ImageIO.cpp  ImageIO.h  In.cpp  In.h  InPort.cpp  InPort.h  Out.cpp  Out.h  OutPort.cpp  OutPort.h  TextureIO.cpp  TextureIO.h  test-6.cpp
apps/Test/v1/: v1.cpp
apps/Test/v2/: Attribute.cpp  Attribute.h  Program.cpp  Program.h  Uniform.cpp  Uniform.h  v2.cpp
modules/Ganymede/: CMakeLists.txt
modules/Ganymede/include/: Ganimede.h
modules/Ganymede/src/: Boolean.cpp  Function.cpp  Nil.cpp  Number.cpp  State.cpp  String.cpp  Table.cpp
modules/Jupiter/: CMakeLists.txt
modules/Jupiter/include/: Jupiter.h
modules/Jupiter/src/: AssetTextureLoader.cpp  Attribute.cpp  Aware.cpp  Body.cpp  Box2DVisitor.cpp  Box2dNode.cpp  Box2dVisitor.cpp  CPPControllerFactory.cpp  Camera.cpp  CircleShape.cpp  CollisionListener.cpp  ComplexShape.cpp  Controller.cpp  ControllerImpl.cpp  DrawEngine.cpp  DrawNode.cpp  DummySound.cpp  DummySoundEngine.cpp  DummyTextureLoader.cpp  File-android.cpp  File-default.cpp  File.cpp  FileFactory.cpp  FileShader.cpp  FileShaderFactory.cpp  GLES20Engine.cpp  GLEngine.cpp  Game.cpp  GameImpl.cpp  Image.cpp  ImageImpl.cpp  ImageImpl.h  ImageShape.cpp  ImageTexture.cpp  JSONGameFactory.cpp  JSONNodeFactory.cpp  JsonGame.cpp  JsonGameHolder.cpp  JsonGameHolder.h  JsonNode.cpp  (+48 more)
modules/Jupiter/tests/: main.cpp
wrappers/: Box2D.i  CMakeLists.txt  Jupiter.i  LuaJupiter.i  PyJupiter.i  gl.i  glm.i
wrappers/Box2D/: Box2D.i  CMakeLists.txt
wrappers/Jupiter/: CMakeLists.txt  Jupiter.i
wrappers/gl/: CMakeLists.txt  gl.i
wrappers/glew/: CMakeLists.txt  glew.i
wrappers/glfw/: CMakeLists.txt  glfw.i
wrappers/glm/: CMakeLists.txt  glm.i
wrappers/lua/: CMakeLists.txt
wrappers/python/: CMakeLists.txt  Jupiter.i
wrappers/python/src/: Controller.i  Game.i  JupiterError.i  Node.i  Shape.i  Sprite.i  Texture.i
wrappers/src/: Aware.i  Controller.i  File.i  Game.i  JsonGame.i  LinuxFileFactory.i  LinuxPlatform.i  Node.i  Shape.i  Sprite.i
(+356 files in other folders)
